--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="AboutMe">
 								<h2 class="major">About Me</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<img align="right" height="270px" alt="GIF" src="images/me.png" />
+								<img align="right" height="270px" alt="Me" src="images/me.png" />
 								<p>Hello ! My name is Christian Fernández and I am a recent graduate from Lehman College at CUNY with a bachelors in Economics.
 								I am particularly passionate about data analytics and machine learning and am largely self-taught in <b>Python, SQL, Tableau, and Excel.</b></p>
 								<p>I would describe myself as logical and inquisitive and working with data is something that I believe requires both, making it the perfect career choice for me. I find it to be very satisfying whenever I'm able to derive interesting insights from a messy dataset or when I build a machine learning model and get a great prediction score.</p> 
@@ -57,12 +57,12 @@
 
 								<p>I currently reside in New York and speak English and Spanish. In my free time I enjoy weight lifting, baseball, documentaries, and philosophy.</p>
 							<hr class="solid">
-							<h2 class="major">Resumé</h2>
+							<h2 class="major">The Gist of It</h2>
 								<p>Click the button below for a copy of my resume summing all of this up with what I feel are my strongest projects (plus a little more) into a neat one page document for your records.</p>
 								<ul class="actions special">
-									<li><a href="https://drive.google.com/drive/folders/1dnbo82ijlmO7SyO84Bh4P30b4HdK9-Mv?usp=sharing" class="button">Free Resume</a></li>
+									<li><a href="https://drive.google.com/drive/folders/1dnbo82ijlmO7SyO84Bh4P30b4HdK9-Mv?usp=sharing" class="button primary">Free Resume</a></li>
 								</ul>
-							<hr class="solid">
+							<!-- <hr class="solid">
 							<h2 class="major">Contact</h2>
 							<form method="post" action="mailto:fernandez.christian13@gmail.com">
 								<div class="fields">
@@ -85,7 +85,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<!-- <li><a href="mailto:fernandez.christian13@gmail.com" class="icon brands fa-google"><span class="label">Google</span></a></li>
@@ -103,7 +103,7 @@
 							<h3>Customer Churn Prediction Model</h3>
 							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<p>Analyzed customer churn data for a telephone and internet service company containing 20 different features.</p> 
-								<p>Built and tuned 5 different classification models using the sklearn library to predict likelihood of customer churn as well as which factors were causing it with an accuracy of 80%.</p>
+								<p>Built and tuned 5 different classification models using the sklearn library to predict likelihood of customer churn as well as which factors were causing it with an <b>accuracy of 80%.</b></p>
 								<p><b>Insights:</b> 
 									<ul class="default">
 										<li>Customer tenure and the companies fiber optic internet service were the biggest reasons for churn.</li>
@@ -116,7 +116,7 @@
 							<h3>Medical Insurance Cost Estimator</h3>
 							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<p>Aimed to predict medical insurance costs in the United States based on 6 factors using a simulated dataset based on U.S Census Data.</p> 
-								<p>Built and tuned 5 different regression models with grid searches using the Sci-Kit Learn library and subsequently built an app using Streamlit for getting a cost estimation. Predicted costs with an accuracy of 90%. </p>
+								<p>Built and tuned 5 different regression models with grid searches using the Sci-Kit Learn library and subsequently built an app using Streamlit for getting a cost estimation. Predicted costs with an <b>accuracy of 90%.</b></p>
 								<p><b>Insights:</b> 
 									<ul class="default">
 										<li>Smoker status and age were the biggest factors in determining insurance costs.</li>
@@ -134,13 +134,13 @@
 							<h3>Heart Disease Risk Detection</h3>
 							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<p>Aimed to predict likelihood of heart disease in patients based on a number of cardiovascular metrics.</p>
-								<p>Built and tuned 4 different classification models using the sklearn library to achieve prediction accuracy of 88%.</p>
+								<p>Built and tuned 4 different classification models using the sklearn library to achieve prediction <b>accuracy of 88%.</b></p>
 								<p>GitHub Repo <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/heart%20disease%20risk%20nb/HeartAttackClassification.ipynb"><b>HERE</b></a></p>	
 							<hr class="solid">	
 							<h3>Wine Classifier</h3>
 							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<p>Predicted Vinho Verde brand wine quality and type (red or white) based on multiple physicochemical factors.</p> 
-								<p>Built and tuned 4 classification models using the Sci-Kit Learn library for each target variable and created an app using Streamlit for potential customers. Predicted wine quality with an accuracy of 80% and wine type with an accuracy of 99.5%.</p>
+								<p>Built and tuned 4 classification models using the Sci-Kit Learn library for each target variable and created an app using Streamlit for potential customers. Predicted wine quality with an <b>accuracy of 80%</b> and wine type with an <b>accuracy of 99.5%.</b></p>
 								<p>GitHub Repo <a href="https://github.com/ChrisF03/Portfolio-Projects/tree/main/app_2_wine_classifier"><b>HERE</b></a></p>
 							<hr class="solid">	
 							<h3>MLB Web Scraper</h3>
@@ -205,27 +205,27 @@
 						<h3>Advertisement Sales Dashboard</h3>
 						<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 							<p>Created and deployed a dashboard tracking sales data for a fictional marketing consultancy over a one year span.</p> 
-							<p>Included total revenue, monthly revenue, best-performing consultants and teams as well as best selling ad-channels etc, all filterable by month and/or sales team.</p>
-							<!-- <p>Some questions answered: 
+							<p>Dashboard is filterable by month and/or sales team.</p>
+							<p><b>Some metrics shown:</b>
 								<ul class="default">
-									<li></li>
-									<li></li>
-									<li></li>
+									<li>Total revenue for the year and monthly breakdown.</li>
+									<li>Best-performing consultants and teams</li>
+									<li>Best selling advertisement channels.</li>
 								</ul> 
-							</p> -->
+							</p>
 							<p>Dashboard Link <a href="https://public.tableau.com/app/profile/chrisf03/viz/SalesDashboard_16781688272840/SalesDashboard"><b>HERE</b></a></p>
 						<hr class="solid">	
 						<h3>COVID-19 Vaccination Tracker</h3>
 						<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 							<p>Created a dashboard tracking partial (1) and full (2) vaccinations around the world as of 1/26/2023.</p> 
-							<p>Added filters for continent, country, and date range, utilized world map to visualize vaccinations per hundred for every country and a logarithmic scale to visualize GDP per Capita and Vaccinations per Hundred.</p>
-							<!-- <p>Some questions answered: 
+							<p>Dashboard is filterable by continent, country, and date range.</p>
+							<p><b>Some metrics shown:</b>
 								<ul class="default">
-									<li>Total number of unique exhibits per department.</li>
-									<li>Most represented artists.</li>
-									<li>Most exhibited art mediums.</li>
+									<li>Total partial and full vaccinations and percentage of global population still unvaccinated.</li>
+									<li>World map measuring vaccinations per hundred people for each country. </li>
+									<li>Logarithmic scale visualizing GDP per Capita and vaccinations per hundred people.</li>
 								</ul> 
-							</p> -->
+							</p>
 							<p>Dashboard Link <a href="https://public.tableau.com/app/profile/chrisf03/viz/COVID-19VaccinationTracker_16748117195790/COVIDVaccinationTracker"><b>HERE</b></a></p>
 						<hr class="solid">	
 						<h3>A.I Index Dashboard</h3>
@@ -276,6 +276,8 @@
 								</ul> 
 							</p>
 							<p>GitHub Link <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/Bike%20Buyer%20Dataset.xlsx"><b>HERE</b></a></p>
+						</article>
+
 
 						<!-- Contact -->
 						<article id="Contact">
@@ -308,8 +310,9 @@
 								</ul>
 							</article>
 
+
 						<!-- Elements -->
-							<!-- <article id="element">
+							<!-- <article id="elements">
 								<h2 class="major">Elements</h2>
 
 								<section>
