--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 										<li>DSL internet service led to higher customer satisfaction.</li>
 									</ul> 
 								</p>
+								<iframe src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" width="565px" height="300px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 								<p>GitHub Repo <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/telco%20churn%20nb/Telco_Churn.ipynb"><b>HERE</b></a></p>
 							<hr class="solid">
 							<h3>Medical Insurance Cost Estimator</h3>
