--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 										<li>Most common fullfilment and shipment methods.</li>
 									</ul> 
 								</p>
-							<p>GitHub Link <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/Projects/Supply_Chain_Analysis.xlsx"><b>HERE</b></a></p>
+							<p>GitHub Link <a href="https://github.com/ChrisF03/Portfolio-Projects/tree/main/Projects/supply%20chain%20analysis%20(Excel)"><b>HERE</b></a></p>
 						<hr class="solid">
 						<h3>Bike Buyer Analysis</h3>
 						<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
