--- a/index.html
+++ b/index.html
@@ -113,7 +113,16 @@
 								<li>Gained further insight using Pandas to determine that <u>26.6% of customers churned</u>, most of them relatively new, and that Fiber Optic Internet Service was the main reason for this.</li>
 								<li>Built and tuned <u>5 different classification models</u> using the sklearn library to predict likelihood of customer churn as well as which factors were causing it with a final <u>accuracy of 80%</u></li>
 							</ul>
-								<iframe src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" width="565px" height="300px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+
+							<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ 							padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ 							border-radius: 8px; will-change: transform;">
+ 							<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    						src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" allowfullscreen="allowfullscreen" allow="fullscreen">
+  							</iframe>
+							</div>
+
+								<!-- <iframe src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" width="565px" height="300px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> -->
 								<p>GitHub link <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/Projects/telco%20churn%20nb/Telco_Churn.ipynb"><b>HERE</b></a></p>
 							<hr class="solid">
 <!--======================================================================================================================================= -->
