--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#AboutMe"><b>Intro</b></a></li>
+								<li><a href="#AboutMe"><b>About Me</b></a></li>
 								<li><a href="#Projects"><b>Projects</b></a></li>
-								<li><a href="#Contact"><b>Contact</b></a></li>
+								<li><a href="#Contact"><b>Resume</b></a></li>
 							</ul>
 						</nav>
 					</header>
