--- a/index.html
+++ b/index.html
@@ -93,6 +93,31 @@
 							<p>GitHub link <a href="https://github.com/ChrisF03/Portfolio-Projects/tree/main/Projects/plato's%20pizza%20analysis"><b>HERE</b></a></p>
 							<hr class="solid">
 <!--======================================================================================================================================= -->
+							<h3>SQL Case Studies</h3>
+							<h5><u>Tools Used</u>: SQL (PostgreSQL v13)</h5>
+							<p>For this project, I successfully completed well over 100 queries across 8 comprehensive case studies provided by Danny Ma by way of his 8-week SQL Challenge.</p>
+							<p>The case studies provide multiple realistic end-to-end project scenarios that represent the sort of work performed in a data analytics role and contain everything from customer segmentation to before-and-after analysis to product funnel analysis!</p>
+							<b>Domains covered in the case studies include</b>:
+							<ol class="default">
+								<li>Financial Markets</li>
+								<li>Digital Marketing</li>
+								<li>People Analytics</li>
+								<li>Fast Moving Consumer Goods</li>
+								<li>Marketing Analytics</li>
+								<li>Retail Analytics</li>
+							</ol>
+							
+							<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ 										padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ 										border-radius: 8px; will-change: transform;">
+  								<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    							src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFyaQDE0ng&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  								</iframe>
+							</div>
+
+							<p>GitHub link <a href="https://github.com/ChrisF03/Danny-Ma-SQL-Case-Studies-/tree/main"><b>HERE</b></a></p>
+							<hr class="solid">
+<!--======================================================================================================================================= -->
 							<h3>MLB Web Scraper</h3>
 							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 							<h5><u>Tools Used</u>: Python (BeautifulSoup, Requests, Pandas, Numpy), Streamlit</h5>
@@ -114,15 +139,16 @@
 								<li>Built and tuned <u>5 different classification models</u> using the sklearn library to predict likelihood of customer churn as well as which factors were causing it with a final <u>accuracy of 80%</u></li>
 							</ul>
 
-							<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+							<!-- <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  							padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  							border-radius: 8px; will-change: transform;">
  							<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     						src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" allowfullscreen="allowfullscreen" allow="fullscreen">
   							</iframe>
-							</div>
+							</div> -->
 
-								<!-- <iframe src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" width="565px" height="300px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> -->
+							<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://onedrive.live.com/embed?resid=692E28EAC5EC212%216276&amp;authkey=!AK9fcsk6_GbxedQ&amp;em=2&amp;wdAr=1.7777777777777777" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>	
+
 								<p>GitHub link <a href="https://github.com/ChrisF03/Portfolio-Projects/blob/main/Projects/telco%20churn%20nb/Telco_Churn.ipynb"><b>HERE</b></a></p>
 							<hr class="solid">
 <!--======================================================================================================================================= -->
